--- a/Logistic_regression.ipynb
+++ b/Logistic_regression.ipynb
@@ -17,7 +17,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 1,
       "metadata": {
         "id": "Yt-fQX0a-GAn"
       },
@@ -27,10 +27,10 @@
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
-        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.model_selection import train_test_split, cross_val_score\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.metrics import confusion_matrix, accuracy_score\n"
+        "from sklearn.metrics import confusion_matrix, accuracy_score"
       ]
     },
     {
@@ -86,9 +86,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z3UFjhbcAc3V",
-        "outputId": "05016371-ec46-43b7-df62-7d000b146d22"
+        "outputId": "5b4686dc-6ea2-46bb-bd38-788814d0d68d"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -98,7 +98,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 5
         }
       ]
     },
@@ -113,9 +113,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "H4vTYmCHDdji",
-        "outputId": "9eeaaa2f-14c1-40d1-d085-6d409b2afc34"
+        "outputId": "590f2aff-f462-4626-9148-201cee21584a"
       },
-      "execution_count": 19,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,9 +139,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oafBZcwKD-zZ",
-        "outputId": "505a388c-8074-45e6-bde2-4554c5e5e614"
+        "outputId": "507e8d6e-e53c-40e1-a576-e784174fc4f6"
       },
-      "execution_count": 23,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -151,7 +151,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 7
         }
       ]
     },
@@ -161,25 +161,64 @@
         "#confusion matrix\n",
         "cm = confusion_matrix(y_test, y_hat)\n",
         "acc= accuracy_score(y_test, y_hat)\n",
-        "print(cm)\n",
-        "print(acc)"
+        "print(\"\\nConfusion matrix:\")\n",
+        "print(pd.crosstab(y_test, y_hat, rownames=['True'], colnames=['Predicted'], margins=True))\n",
+        "print(\"\\nAccuracy: \",acc)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "kdkwYxbUFlyW",
-        "outputId": "4ca4bd22-e016-4769-c813-e3582376761c"
+        "outputId": "5e2c3f54-a153-4161-d6ec-716b62f266e8"
       },
-      "execution_count": 26,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[65  3]\n",
-            " [ 8 24]]\n",
-            "0.89\n"
+            "\n",
+            "Confusion matrix:\n",
+            "Predicted   0   1  All\n",
+            "True                  \n",
+            "0          65   3   68\n",
+            "1           8  24   32\n",
+            "All        73  27  100\n",
+            "\n",
+            "Accuracy:  0.89\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 10-fold cross validation for the model\n",
+        "scores = cross_val_score(classifier, X_train, y_train, cv=10) \n",
+        "#print(\"\\n\\n\\n Cross-validation scores: {}\".format(scores))\n",
+        "print(\"Average cross-validation score: {:.2f}\\n\".format(scores.mean()*100))\n",
+        "print(\"Standard deviation cross-validation score: {:.2f}\\n\\n\\n\".format(scores.std()*100))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wvxGta-FPdl6",
+        "outputId": "9f2c0019-1626-46f7-a1c7-9f0c89cbecc4"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Average cross-validation score: 82.33\n",
+            "\n",
+            "Standard deviation cross-validation score: 9.67\n",
+            "\n",
+            "\n",
+            "\n"
           ]
         }
       ]
