--- a/Final_project/KglMar22_ensemble.ipynb
+++ b/Final_project/KglMar22_ensemble.ipynb
@@ -1982,7 +1982,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "XGBoost for regression"
+        "## XGBoost for regression\n",
+        "\n",
+        "Extreme Gradient Boosting\n",
+        "\n",
+        "Gradient boosting refers to a class of ensemble machine learning algorithms that can be used for classification or regression predictive modeling problems.\n",
+        "\n",
+        "Ensembles are constructed from decision tree models. Trees are added one at a time to the ensemble and fit to correct the prediction errors made by prior models. This is a type of ensemble machine learning model referred to as boosting.\n",
+        "\n",
+        "Models are fit using any arbitrary differentiable loss function and gradient descent optimization algorithm. This gives the technique its name, “gradient boosting,” as the loss gradient is minimized as the model is fit, much like a neural network. [source:  [link text](https://machinelearningmastery.com/xgboost-for-regression/)]"
       ],
       "metadata": {
         "id": "VecOjVg-RCEU"
