--- a/Final_project/tpsmar22_lstm.ipynb
+++ b/Final_project/tpsmar22_lstm.ipynb
@@ -374,6 +374,9 @@
     {
       "cell_type": "code",
       "source": [
+        "# reference: https://towardsdatascience.com/cnn-lstm-based-models-for-multiple-parallel-input-and-multi-step-forecast-6fe2172f7668\n",
+        "\n",
+        "\n",
         "def split_sequence(sequence, look_back, forecast_horizon):\n",
         "    \n",
         "    X, y = list(), list()\n",
